--- a/style/style.css
+++ b/style/style.css
@@ -34,12 +34,20 @@ body
 	left:0;
 	background: #ddd;
 	color: #fff;
+
+	background-size: cover;
+}
+
+.playlist_nom
+{
+	text-align: center;
+	color: #000;
 }
 
 .pokedex
 {
-	height: 95%;
-	margin: 1.5% auto 0 auto;
+	height: 90%;
+	margin: 0 auto 0 auto;
 	display: block;
 }
 
@@ -48,20 +56,26 @@ body
 /*Player audio*/
 .player
 {
-	width: 23.8%;
-	float: left;
-	position: absolute;
-	top: 27%;
-	left: 19.5%;
-	background: red;
-	height: 45%;
-	border-radius: 11.5%;
+    width: 22.8%;
+    float: left;
+    position: absolute;
+    top: 28%;
+    left: 21%;
+    background: red;
+    height: 44%;
+    border-radius: 11.5%;
+}
+
+.title_player
+{
+	text-align: center;
+	margin: 5% 0;
 }
 
 .img_player
 {
-    width: 70%;
-    margin: 5% 15%;
+    width: 55%;
+    margin: 2% 23%;
 }
 
 .lecture
@@ -153,11 +167,11 @@ body
 .play
 {
 	position: absolute;
-	top: 81.3%;
-	left: 16.8%;
+	top: 80.3%;
+	left: 18.5%;
 	font-size: 2em;
 	color: #fff;
-	padding: 1.7%;
+	padding: 1.4% 1.6%;
 	cursor: pointer;
 	background: none;
 	border: none;
@@ -168,8 +182,8 @@ body
 .move-music
 {
 	position: absolute;
-	top: 83.3%;
-	left: 37.2%;
+	top: 82%;
+	left: 37.7%;
 	width: 8.5%;
 	height: 5.5%;
 }
@@ -200,15 +214,20 @@ body
 
 .tableau
 {
-
-position: absolute;
-top: 11.3%;
-left: 56.6%;
-width: 24.2%;
-background: red;
-border-radius: 14%;
-max-height: 80%;
+	position: absolute;
+	top: 14%;
+	left: 56.3%;
+	width: 22.8%;
+	background: red;
+	border-radius: 14%;
+	max-height: 72.5%;
 }
+
+.mp3
+{
+	display: none;
+}
+
 
 		table, th, td 
 		{
@@ -228,7 +247,7 @@ max-height: 80%;
 }*/
 		table img
 		{
-			width: 50%;
+			width: 30%;
 		}
 
 		tbody
