Ajout de commentaires

--- a/style/style.css
+++ b/style/style.css
@@ -20,11 +20,6 @@
 	clear: both;
 }
 
-.desactive
-{
-	display: none;
-}
-
 body 
 {
 	position:absolute; 
@@ -34,7 +29,6 @@ body
 	left:0;
 	background: #ddd;
 	color: #fff;
-
 	background-size: cover;
 }
 
@@ -50,8 +44,6 @@ body
 	margin: 0 auto 0 auto;
 	display: block;
 }
-
-
 
 /*Player audio*/
 .player
@@ -98,7 +90,8 @@ body
     display: inline-block;
 }
 
-#progressBar {
+#progressBar 
+{
     width: 0px;
     background: #ebebeb;
     height: 15px;
@@ -110,7 +103,8 @@ body
 }
 
 /*Volume*/
-.volume {
+.volume 
+{
 	vertical-align: bottom;
 	display: inline-block;
 	height: 25px;
@@ -120,7 +114,8 @@ body
 	float: right;
 }
 
-.volume a {
+.volume a 
+{
     display: inline-block;
     background: #ebebeb;
     width: 8px;
@@ -268,7 +263,6 @@ td
 	padding: 0.3% 0;
 	text-align: center;
 	font-size: 22px;
-
 }
 
 tr
@@ -294,12 +288,10 @@ tr:nth-child(2n+1)
 
 .next_genereation
 {
-
 	right: 2%;
 }
 
 .back_generation
 {
 	left: 2%;
-
 }
