--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,96 @@
 	clear: both;
 }
 
-body 
+/*Page d'accueil*/
+
+.body_accueil
+{
+	background-image: url('../img/evolution.jpg');
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+}
+
+.top, .bottom
+{
+	overflow: hidden;
+	position: absolute;
+	width: 100%;
+	height: 50%;
+	transition: 2s;
+	left: 0;
+	z-index: 9000;
+}
+
+.top
+{
+	top: 0;
+}
+
+.bottom
+{
+	bottom: 0;
+}
+
+.bg
+{
+	height: 200%;
+	width: 100%;
+	background: url('../img/pokeball.jpg') center center no-repeat;
+	background-size: cover;
+}
+
+.bottom .bg
+{
+	transform: translateY(-50%);
+}
+
+.poke_gate
+{
+	width: 150px;
+	height: 150px;
+	position: absolute;
+	left: 50%;
+	margin-left: -75px;
+	border-radius: 50%;
+	top: 50%;
+	margin-top: -63.5px;
+	background: transparent;
+	border-style: hidden;
+	cursor: pointer;
+	outline: none;
+	display: inline;
+	z-index: 10000; 
+}
+
+.region 
+{
+	background-color: black;
+	opacity: 0.8;
+	color: red;
+	float: left;
+	width: 25%;
+	height: 1000px;
+	padding-top: 5%;
+	font-size: 50px;
+}
+
+.region:hover 
+{
+	color: red;
+	opacity: 0;
+}
+
+.body_accueil span 
+{
+	margin-left: 120px;
+}
+
+/*Page du player*/
+
+.body_player
 {
 	position:absolute; 
 	top:0; 
