--- a/style/style.css
+++ b/style/style.css
@@ -384,3 +384,31 @@ tr:nth-child(2n+1)
 {
 	left: 2%;
 }
+
+
+
+.window_size
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 9999;
+	width: 100%;
+	height: 100%;
+	background: #ff4d4d;
+	display: none
+}
+
+.window_size h2
+{
+	text-align: center;
+	margin-top: 20%;
+}
+
+@media screen and (max-width : 970px)
+{
+	.window_size
+	{
+		display: block;
+	}
+}
